gen/Parser/FrameParser.java
// Generated from C:/Users/LEGION/Desktop/angular_compiler-master/FrameParser.g4 by ANTLR 4.13.2
package Parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class FrameParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		EXPORT_KW=1, COMPONENT_KW=2, SELECTOR_KW=3, STANDALONE_KW=4, IMPORTS_KW=5, 
		IMPORT_KW=6, FROM_KW=7, TEMPLATE_KW=8, ROUTES_TYPE=9, ROUTES_ID=10, SIGNAL_KW=11, 
		CLASS_KW=12, CONSTRUCTOR_KW=13, CONST_KW=14, AS=15, LET=16, IF=17, ELSE=18, 
		RETURN=19, ANGULAR_QUT=20, ACCESS_MODIFIER=21, TYPE=22, TYPE_DECLARE=23, 
		ARROW=24, NON_NULL_DOT=25, SEMICOLON=26, DOLAR=27, ATT=28, COMMA=29, COLON=30, 
		INTERP_OPEN=31, INTERP_CLOSE=32, LBRACKETS=33, RBRACKETS=34, LPAREN=35, 
		RPAREN=36, LBRACKET=37, RBRACKET=38, EQUALS=39, EQUALEQUAL=40, TEQUAL=41, 
		NTEQUAL=42, NOTEQUAL=43, QUESTION=44, PIPE=45, OROR=46, ANDAND=47, NOT=48, 
		PLUS=49, MINUS=50, ASTERISK=51, DIV=52, DOT=53, LT=54, GT=55, LTE=56, 
		GTE=57, ELLIPSIS=58, QDOT=59, NULLISH=60, DIV_TAG_OPEN=61, DIV_TAG_CLOSE=62, 
		STYLE=63, STAR_NG_IF=64, STAR_NG_FOR=65, CLICK=66, NG_MODEL=67, NG_MODEL_TWO_WAY=68, 
		FORM_TAG_OPEN=69, FORM_TAG_CLOSE=70, ID=71, P_TAG_OPEN=72, P_TAG_CLOSE=73, 
		BUTTON_TAG_OPEN=74, BUTTON_TAG_CLOSE=75, DISABLED=76, INPUT_TAG_OPEN=77, 
		TAG_SELF_CLOSE=78, PLACEHOLDER=79, VALUE=80, NAME=81, IMG_TAG_OPEN=82, 
		SRC=83, ALT=84, LABEL_TAG_OPEN=85, LABEL_TAG_CLOSE=86, FOR=87, SPAN_TAG_OPEN=88, 
		SPAN_TAG_CLOSE=89, A_TAG_OPEN=90, A_TAG_CLOSE=91, HREF=92, TARGET=93, 
		REL=94, ROUTER_LINK_BINDING=95, ROUTER_OUTLET_TAG=96, NG_SUBMIT=97, STRING=98, 
		NUMBER=99, BOOLEAN=100, NULL=101, IDENTIFIER=102, IDENT=103, ESCAPE=104, 
		WS=105;
	public static final int
		RULE_rootprogram = 0, RULE_program = 1, RULE_statements = 2, RULE_stetment = 3, 
		RULE_importStatement = 4, RULE_classStatement = 5, RULE_classBody = 6, 
		RULE_classMember = 7, RULE_propertyDeclaration = 8, RULE_routesPropertyDeclaration = 9, 
		RULE_normalPropertyDeclaration = 10, RULE_componentDecorator = 11, RULE_componentOptions = 12, 
		RULE_selectorProperty = 13, RULE_standaloneProperty = 14, RULE_importsProperty = 15, 
		RULE_templateProperty = 16, RULE_constructorDeclaration = 17, RULE_constructorParamList = 18, 
		RULE_constructorParam = 19, RULE_functionDeclaration = 20, RULE_paramList = 21, 
		RULE_param = 22, RULE_block = 23, RULE_blockContent = 24, RULE_statementInBlock = 25, 
		RULE_ifStatement = 26, RULE_returnStatement = 27, RULE_varDeclareStatement = 28, 
		RULE_varDecl = 29, RULE_generalTypeAnnotation = 30, RULE_typeAliasStatement = 31, 
		RULE_objectType = 32, RULE_objectTypeMembers = 33, RULE_objectTypeMember = 34, 
		RULE_typeRef = 35, RULE_exprStatement = 36, RULE_expr = 37, RULE_assignmentExpr = 38, 
		RULE_assignable = 39, RULE_conditionalExpr = 40, RULE_nullishExpr = 41, 
		RULE_logicalOrExpr = 42, RULE_logicalAndExpr = 43, RULE_equalityExpr = 44, 
		RULE_relationalExpr = 45, RULE_additiveExpr = 46, RULE_multiplicativeExpr = 47, 
		RULE_unaryExpr = 48, RULE_asExpression = 49, RULE_postfixExpr = 50, RULE_signalGenericCallPrimary = 51, 
		RULE_signalGenericArgs = 52, RULE_signalGenericArg = 53, RULE_argumentList = 54, 
		RULE_primary = 55, RULE_importCallPrimary = 56, RULE_arrowFunction = 57, 
		RULE_paramListSimple = 58, RULE_arrayLiteral = 59, RULE_arrayElement = 60, 
		RULE_objectLiteral = 61, RULE_objectProperty = 62, RULE_interpolation = 63, 
		RULE_htmlSection = 64, RULE_htmlImageTag = 65, RULE_imgAttribute = 66, 
		RULE_htmlButtonTag = 67, RULE_buttonAttribute = 68, RULE_buttonContent = 69, 
		RULE_htmlInputTag = 70, RULE_inputAttribute = 71, RULE_htmlParagraphTag = 72, 
		RULE_paragraphAttribute = 73, RULE_paragraphContent = 74, RULE_htmlLabelTag = 75, 
		RULE_labelAttribute = 76, RULE_labelContent = 77, RULE_htmlDivTag = 78, 
		RULE_divAttribute = 79, RULE_divContent = 80, RULE_htmlFormTag = 81, RULE_formAttribute = 82, 
		RULE_formContent = 83, RULE_htmlSpanTag = 84, RULE_spanAttribute = 85, 
		RULE_spanContent = 86, RULE_htmlAnchorTag = 87, RULE_anchorAttribute = 88, 
		RULE_anchorContent = 89, RULE_routerOutletTag = 90, RULE_ngIfDirective = 91, 
		RULE_ngForDirective = 92;
	private static String[] makeRuleNames() {
		return new String[] {
			"rootprogram", "program", "statements", "stetment", "importStatement", 
			"classStatement", "classBody", "classMember", "propertyDeclaration", 
			"routesPropertyDeclaration", "normalPropertyDeclaration", "componentDecorator", 
			"componentOptions", "selectorProperty", "standaloneProperty", "importsProperty", 
			"templateProperty", "constructorDeclaration", "constructorParamList", 
			"constructorParam", "functionDeclaration", "paramList", "param", "block", 
			"blockContent", "statementInBlock", "ifStatement", "returnStatement", 
			"varDeclareStatement", "varDecl", "generalTypeAnnotation", "typeAliasStatement", 
			"objectType", "objectTypeMembers", "objectTypeMember", "typeRef", "exprStatement", 
			"expr", "assignmentExpr", "assignable", "conditionalExpr", "nullishExpr", 
			"logicalOrExpr", "logicalAndExpr", "equalityExpr", "relationalExpr", 
			"additiveExpr", "multiplicativeExpr", "unaryExpr", "asExpression", "postfixExpr", 
			"signalGenericCallPrimary", "signalGenericArgs", "signalGenericArg", 
			"argumentList", "primary", "importCallPrimary", "arrowFunction", "paramListSimple", 
			"arrayLiteral", "arrayElement", "objectLiteral", "objectProperty", "interpolation", 
			"htmlSection", "htmlImageTag", "imgAttribute", "htmlButtonTag", "buttonAttribute", 
			"buttonContent", "htmlInputTag", "inputAttribute", "htmlParagraphTag", 
			"paragraphAttribute", "paragraphContent", "htmlLabelTag", "labelAttribute", 
			"labelContent", "htmlDivTag", "divAttribute", "divContent", "htmlFormTag", 
			"formAttribute", "formContent", "htmlSpanTag", "spanAttribute", "spanContent", 
			"htmlAnchorTag", "anchorAttribute", "anchorContent", "routerOutletTag", 
			"ngIfDirective", "ngForDirective"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'export'", "'Component'", "'selector'", "'standalone'", "'imports'", 
			"'import'", "'from'", "'template'", "'Routes'", "'routes'", "'signal'", 
			"'class'", "'constructor'", "'const'", "'as'", "'let'", "'if'", "'else'", 
			"'return'", "'`'", null, null, "'type'", "'=>'", "'!.'", "';'", "'$'", 
			"'@'", "','", "':'", "'{{'", "'}}'", "'{'", "'}'", "'('", "')'", "'['", 
			"']'", "'='", "'=='", "'==='", "'!=='", "'!='", "'?'", "'|'", "'||'", 
			"'&&'", "'!'", "'+'", "'-'", "'*'", "'/'", "'.'", "'<'", "'>'", "'<='", 
			"'>='", "'...'", "'?.'", "'??'", "'<div'", "'</div>'", "'style'", "'*ngIf'", 
			"'*ngFor'", "'(click)'", "'[ngModel]'", "'[(ngModel)]'", "'<form'", "'</form>'", 
			"'id'", "'<p'", "'</p>'", "'<button'", "'</button>'", "'disabled'", "'<input'", 
			"'/>'", "'placeholder'", "'value'", "'name'", "'<img'", "'src'", "'alt'", 
			"'<label'", "'</label>'", "'for'", "'<span'", "'</span>'", "'<a'", "'</a>'", 
			"'href'", "'target'", "'rel'", "'[routerLink]'", "'<router-outlet></router-outlet>'", 
			"'(ngSubmit)'", null, null, null, "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "EXPORT_KW", "COMPONENT_KW", "SELECTOR_KW", "STANDALONE_KW", "IMPORTS_KW", 
			"IMPORT_KW", "FROM_KW", "TEMPLATE_KW", "ROUTES_TYPE", "ROUTES_ID", "SIGNAL_KW", 
			"CLASS_KW", "CONSTRUCTOR_KW", "CONST_KW", "AS", "LET", "IF", "ELSE", 
			"RETURN", "ANGULAR_QUT", "ACCESS_MODIFIER", "TYPE", "TYPE_DECLARE", "ARROW", 
			"NON_NULL_DOT", "SEMICOLON", "DOLAR", "ATT", "COMMA", "COLON", "INTERP_OPEN", 
			"INTERP_CLOSE", "LBRACKETS", "RBRACKETS", "LPAREN", "RPAREN", "LBRACKET", 
			"RBRACKET", "EQUALS", "EQUALEQUAL", "TEQUAL", "NTEQUAL", "NOTEQUAL", 
			"QUESTION", "PIPE", "OROR", "ANDAND", "NOT", "PLUS", "MINUS", "ASTERISK", 
			"DIV", "DOT", "LT", "GT", "LTE", "GTE", "ELLIPSIS", "QDOT", "NULLISH", 
			"DIV_TAG_OPEN", "DIV_TAG_CLOSE", "STYLE", "STAR_NG_IF", "STAR_NG_FOR", 
			"CLICK", "NG_MODEL", "NG_MODEL_TWO_WAY", "FORM_TAG_OPEN", "FORM_TAG_CLOSE", 
			"ID", "P_TAG_OPEN", "P_TAG_CLOSE", "BUTTON_TAG_OPEN", "BUTTON_TAG_CLOSE", 
			"DISABLED", "INPUT_TAG_OPEN", "TAG_SELF_CLOSE", "PLACEHOLDER", "VALUE", 
			"NAME", "IMG_TAG_OPEN", "SRC", "ALT", "LABEL_TAG_OPEN", "LABEL_TAG_CLOSE", 
			"FOR", "SPAN_TAG_OPEN", "SPAN_TAG_CLOSE", "A_TAG_OPEN", "A_TAG_CLOSE", 
			"HREF", "TARGET", "REL", "ROUTER_LINK_BINDING", "ROUTER_OUTLET_TAG", 
			"NG_SUBMIT", "STRING", "NUMBER", "BOOLEAN", "NULL", "IDENTIFIER", "IDENT", 
			"ESCAPE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FrameParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FrameParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RootprogramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(FrameParser.EOF, 0); }
		public List<ProgramContext> program() {
			return getRuleContexts(ProgramContext.class);
		}
		public ProgramContext program(int i) {
			return getRuleContext(ProgramContext.class,i);
		}
		public RootprogramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rootprogram; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrameParserVisitor ) return ((FrameParserVisitor<? extends T>)visitor).visitRootprogram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootprogramContext rootprogram() throws RecognitionException {
		RootprogramContext _localctx = new RootprogramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_rootprogram);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1970505503571010L) != 0) || ((((_la - 98)) & ~0x3f) == 0 && ((1L << (_la - 98)) & 31L) != 0)) {
				{
				{
				setState(186);
				program();
				}
				}
				setState(191);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(192);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrameParserVisitor ) return ((FrameParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(195); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(194);
					statements();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(197); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementsContext extends ParserRuleContext {
		public StetmentContext stetment() {
			return getRuleContext(StetmentContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(FrameParser.SEMICOLON, 0); }
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrameParserVisitor ) return ((FrameParserVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(199);
			stetment();
			}
			setState(201);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(200);
				match(SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
